<resources>
    <string name="app_name">Popular Books</string>
    <string name="search_bar">example:- love</string>
    <string name="search_button">Search button</string>
    <string name="no_connection">Network Connection not available!</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="no_description">no description available.</string>
    <string name="no_date">no date available.</string>
    <string name="author_name">Authors</string>
    <string name="publish_date">publish date:-  </string>
    <string name="book_details">Book Details</string>
    <string name="book_description">Description:-</string>
    <string name="popular_books">popular books</string>
    <string name="favourites">favorites</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_heder">Favorite Books</string>
    <string name="share">Share</string>
    <string name="favourite">Mark as Favorite</string>
    <string name="mark_unFavourite">MARK AS UNFAVORITE</string>
    <string name="mark_Favourite">MARK AS FAVORITE</string>
    <string name="from">From:</string>
    <string name="notificationBody">Notification Message Body:</string>
    <string name="notificationTitle">My notification</string>
    <string name="img_descr">to display book cover</string>
    <string name="AppIDads">ca-app-pub-9337464230725544/4549973935</string>
    <string name="datakey">data</string>
    <string name="bookskey">books</string>
    <string name="firebaseError">add error</string>
    <string name="adsError">Ads google error</string>
    <string name="noConnection">No Internet Connection!!</string>
    <string name="love">love</string>
    <string name="APISearch"><![CDATA[+insubject:keyes&key=]]></string>
    <string name="items">items</string>
    <string name="volumeInfo">volumeInfo</string>
    <string name="title">title</string>
    <string name="authors">authors</string>
    <string name="publisher">publisher</string>
    <string name="publishedDate">publishedDate</string>
    <string name="description">description</string>
    <string name="imageLinks">imageLinks</string>
    <string name="thumbnail">thumbnail</string>
    <string name="medium">medium</string>
    <string name="smallThumbnail">smallThumbnail</string>
    <string name="large">large</string>
    <string name="BookID">BookID</string>
    <string name="BookTitle">BookTitle</string>
    <string name="BookPublishDate">BookPublishDate</string>
    <string name="BookDescription">BookDescription</string>
    <string name="BookPosterImage">BookPosterImage</string>
    <string name="BookAuthor">BookAuthor</string>
    <string name="and"><![CDATA[&&]]></string>
    <string name="popular">popular</string>
    <string name="favorites">favorites</string>
    <string name="book">book</string>
    <string name="id">id</string>
    <string name="bookdata">book</string>
    <string name="errorAdd">add error</string>
    <string name="errorAds">Ads google error</string>
    <string name="booktitle">book</string>
    <string name="BookTitleColumn">BookTitle</string>
    <string name="bookAwwsome">. this book is awesome!</string>
    <string name="shareby">Share by</string>
    <string name="mark__Favourite">MARK AS FAVORITE</string>
    <string name="notification">My notification</string>
    <string name="notificationText">Hello World!</string>
</resources>
