<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/item_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_layout"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:id="@+id/date_layouts"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/publish_date"
                android:textSize="16sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/no_date"
                android:textSize="16sp"
                android:textStyle="normal"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/include"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share" />

            <Button
                android:id="@+id/btn_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_anchor="@id/include"
                android:text="@string/mark_Favourite" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/date_layouts"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:foreground="@drawable/book_selector"
            app:cardCornerRadius="2dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewContributorAvatar"
                    android:contentDescription="@string/img_descr"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/placeholder_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewContributorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"

                    android:text="@string/author_name"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/imageViewContributorAvatar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewContributorAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/textViewContributorName"
                    tools:text="author" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/description_layout"
            android:layout_below="@+id/card_view_detail">
            <TextView
                android:id="@+id/decrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-seridpf"
                android:text="@string/book_description"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent" />
            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:foreground="@drawable/book_selector"
                app:cardCornerRadius="2dp">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/card1"
                    android:layout_below="@+id/card_view_detail"
                    android:fontFamily="sans-serif"
                    android:text="@string/no_description"
                    android:textSize="16sp"

                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/decrip"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.v7.widget.CardView>

        </LinearLayout>



        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/description_layout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9337464230725544/4549973935"></com.google.android.gms.ads.AdView>
    </RelativeLayout>

</ScrollView>
